# Apolo-11

./: README.md  new-configuration.toml  pyproject.toml
Apolo-11-HardCoded-Version/: notes.txt
Apolo-11-HardCoded-Version/src/: console_manager.py  main.py
Apolo-11-Project-Bootcamp/: configuration.toml  new-configuration.toml  new-configuration.toml.bak  pyproject.toml
Apolo-11-Project-Bootcamp/data/: iterations.json
Apolo-11-Project-Bootcamp/information/: ComoEjecutarElProyecto.txt
Apolo-11-Project-Bootcamp/src/: base_classes.py  main.py  simulation_engine.py  simulation_engine.py.bak  tempCodeRunnerFile.py
data/reports/: activity_report_executionnumber_1.csv  activity_report_executionnumber_3.csv  activity_report_executionnumber_7.csv
information/: some-libraries.txt
src/: base_classes.py  custom_exceptions.py  file_handling.py  main.py  report_generation copy.py  report_generation.py  simulation_engine.py  storing_handling.py
